--- a/ors-api/ors-config.yml
+++ b/ors-api/ors-config.yml
@@ -1,6 +1,6 @@
 ##### openrouteservice settings file #####
 # This file contains parameters for openrouteservice.
-# For a full list of possible parameters see documentation, below are some examples.
+# For a full list of possible parameters see https://giscience.github.io/openrouteservice/, below are some examples.
 
 ### uncomment the following line to turn on debug output
 #logging.level.org.heigit: DEBUG
@@ -11,6 +11,7 @@ ors:
 #    allowed_origins: "*"
 #    allowed_headers: Content-Type, X-Requested-With, accept, Origin, Access-Control-Request-Method, Access-Control-Request-Headers, Authorization
 #    preflight_max_age: 600
+
   engine:
     graphs_root_path: ./ors-core/data/graphs
 
